--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,3 +11,7 @@ classifiers = [
     "Programming Language :: Python :: Implementation :: PyPy",
 ]
 dynamic = ["version"]
+
+[tool.maturin]
+python-source = "."
+module-name = "pyscramble._core"
